--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,11 @@ doc/readme_units_conversion_ADMR.pdf
 .vscode/
 
 # User generated data and plots
-user_data/*
+data/**/*.dat
+plots/**/*.pdf
+
 user_plots/*
+user_data/*
 
 
 # Byte-compiled / optimized / DLL files
