Gitignore .csv files in the data folder and add a post subfolder

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ doc/readme_units_conversion_ADMR.pdf
 
 # User generated data and plots
 data/**/*.dat
+data/**/*.csv
 plots/**/*.pdf
 
 user_plots/*
