added parameter space exploration script

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ data/**/*.csv
 plots/**/*.pdf
 plots/**/*.csv
 plots/**/*.dat
+plots/**/*.npy
 
 data_processing/**/*.dat
 data_processing/**/*.pickle
