--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,7 @@ report/*.bbl
 report/*.blg
 report/*.fdb_latexmk
 report/*.fls
+report/report.pdf
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
