--- a/.gitignore
+++ b/.gitignore
@@ -125,15 +125,15 @@ ipython_config.py
 .python-version
 
 # latex
-report/*.aux
-report/*.log
-report/*.out
-report/*.synctex.gz
-report/*.toc
-report/*.bbl
-report/*.blg
-report/*.fdb_latexmk
-report/*.fls
+report/**/*.aux
+report/**/*.log
+report/**/*.out
+report/**/*.synctex.gz
+report/**/*.toc
+report/**/*.bbl
+report/**/*.blg
+report/**/*.fdb_latexmk
+report/**/*.fls
 report/report.pdf
 
 # pipenv
