--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ plots/**/*.pdf
 plots/**/*.csv
 plots/**/*.dat
 plots/**/*.npy
+plots/**/*.pickle
 
 data_processing/**/*.dat
 data_processing/**/*.pickle
